[package]
name = "hid-webhook"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
envy = "0.4.2"
evdev = { version = "0.12.1", features = ["serde"] }
log = "0.4.20"
rustls = { version = "0.21.7", default-features = false, features = ["tls12", "dangerous_configuration"] }
serde = { version = "1.0.189", features = ["derive"] }
ureq = { version = "2.8.0", features = ["json"] }
webpki-roots = "0.25.2"
