[package]
name = "hid-webhook"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
envy = "0.4.2"
evdev = { version = "0.12.2", features = ["serde"] }
humantime-serde = "1.1.1"
log = "0.4.21"
# version required by `ureq`
rustls = { version = "0.22.4", default-features = false, features = ["tls12"] }
serde = { version = "1.0.203", features = ["derive"] }
ureq = { version = "2.9.7", features = ["json"] }
webpki-roots = "0.26.1"
