[package]
name = "hid-webhook"
version = "0.2.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
envy = "0.4"
evdev = { version = "0.13", features = ["serde"] }
humantime-serde = "1.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "3.0", features = ["json"] }
webpki-roots = "0.26"
